Fix 'Anywhere' filter issue that breaks the SQLAlchemy query

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,4 +1,3 @@
-
 /* ==== ALL PAGES ==== */
 body {
   background-image: url("/static/img/cactus2.jpg");
@@ -12,11 +11,20 @@ body {
  }
 
 h1 {
+  margin-top: 1rem;
   font-family: 'Pangolin', cursive;
 }
 
+#slider > span > span:nth-child(11) > span > span.MuiSlider-root {
+  color: black;
+}
+
+#tagline {
+  color:#3f51b5
+}
+
 #logo {
-  border-radius:50%;
+  border-radius:50%; /* Make round logo */
 }
 
 .navbar-dark .navbar-toggler {
@@ -30,6 +38,7 @@ h1 {
   width: 100%;
 }
 
+/* Font awesome icons */
 .fab {
   margin: .5rem;
   color:rgba(63, 81, 181, 1);
@@ -113,6 +122,9 @@ h1 {
   margin-bottom: 0.25rem;
 }
 
+.form-check-input{
+  color:red;
+}
 /* ==== MAPS ==== */
 #map {
   border-radius: 5px;
